<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="30sp"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:textSize="20sp"
        android:id="@+id/firstNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_number"/>

    <EditText
        android:textSize="20sp"
        android:id="@+id/secondNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_number"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"/>

    <Button
        android:id="@+id/btnCalcDiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/divide"/>




</LinearLayout>